--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,83 +1,83 @@
-body {
-	background-color: grey;
-	margin: 0;
-	padding: 0;
-}
-header {
-
-	width: 100%;
-	border-bottom: solid 1px #cccccc;
-	color: #ffffff;
-	margin-bottom: 25px;
+body{
+	background-image: url("./assets/images/hypnotize.png");
 }
 
-a:link, a:visited {
-
-    color: grey;
-    text-align: center; 
-    text-decoration: none;
+a:active, a:visited, a:link {
+	text-decoration: none;
+	color: grey;
 }
 
-a:hover{
-
+a:hover {
 	color: pink;
 }
 
-li {
-	margin-top: 10px;
-	font-size: 18px;
-	display: inline-block;
-}
-
-#navagationLinks {
-
-	float: right;
-	margin-right: 175px;
-}
-
-#nameHeader {
-	clear: both;
-	margin-left: 150px;
-	background-color: #4aaaa5;
-	padding: 24px;
-	overflow: auto;
-}
-
-.socialContainer {
-
-	text-align: center;
-	width: 260px;
-	height: 200px;
-	float: right;
-	margin-right: 175px;
+.header {
 	background-color: #ffffff;
-	border: solid 1px grey;
+	margin: auto;
+	border-bottom: solid 1px #cccccc;
+	width: 100%;
+	height: 99px;
+	margin-bottom: 25px;
 }
 
-#socialHeader {
-
-	padding: 2px;
+.contentWidth {
+	width: 960px;
+	margin: auto;
+	clear: both;
 }
 
-#bioContainer {
-
-	width: 670px;
-	margin-left: 150px;
-	padding: 20px;
-	font-family: arial;
-	background-color: white;
-	border: solid 1px grey;
-	overflow: auto;
+.nameHolderLeft {
+	background-color: #4aaaa5;
+	padding: 10px;
+	margin: 0;
+	color: #ffffff;
+	float: left;
 }
 
-#bioHeader {
-
-	background-color: white;
-	border-bottom: solid #cccccc;
-	color: #4aaaa5;
+.navBarRight {
+	position: relative;
+	float: right;
+	padding: 40px;
+	font-size: 18px;
+	color: grey;
 }
 
-.content {
+.leftContainer{
+	width: 650px;
+	background-color: #ffffff;
+	position: absolute;
+	border: solid 2px #dddddd;
+}
 
-	background-color: #ffffff
+.leftHeader{
+	margin: 30px;
+	border-bottom: solid 3px #dddddd;
+}
+.socialContainer {
+	background-color: #ffffff;
+	width: 270px;
+	float: right;
+	text-align: center;
+	border: solid 2px #dddddd;
+}
+
+.socialHeader{
+	margin: 30px;
+	border-bottom: solid 3px #dddddd;
+}
+
+.socialLinks {
+	margin-bottom: 30px;
+}
+footer{
+	clear: both;
+	width: 100%;
+	background-color: #666666;
+	position: fixed;
+	bottom: 0;
+	padding: 25px;
+	text-align: center;
+	color: #ffffff;
+	border-top: solid 5px #4aaaa5; 
+
 }
