--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("./assets/images/hypnotize.png");
+	background: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
 }
 
 a:active, a:visited, a:link {
